test: 쿠키 생성기 테스트 추가