@@ -15,8 +15,9 @@ public class CookieUtil {
     }
 
     public static Cookie read(List<String> values) {
-        Map<String, String> cookies = Arrays.stream(values.get(0).split(VALUES_DELIMITER))
+        Map<String, String> cookies = Arrays.stream(values.getFirst().split(VALUES_DELIMITER))
                 .map(value -> value.split(COOKIE_DELIMITER))
+                .filter(element -> element.length == 2)
                 .collect(Collectors.toMap(
                         element -> element[0].trim(),
                         element -> element[1].trim()
